# data-analyses

./: .bashrc  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  AH_Notes.ipynb  Amanda_Exercise1.ipynb  Catalog.yml  Exercise2.ipynb  Exercise2_AH.ipynb  Exercise3_AH.ipynb  Exercise3_AH_2.ipynb  Exercise4.ipynb  Exercise4_AH.ipynb  Exercise4_AH_USE.ipynb  Exercise5.ipynb  Exercise5_AH.ipynb  Exercise6_AH.ipynb  Exercise7.ipynb  Gemfile  Makefile  README.md  Testing.ipynb  Untitled.ipynb  _config.yml  agencies_50m_from_shn.ipynb  generate_reports.py  index.markdown  portfolio_Makefile  portfolio_Makefile_dla  pyproject.toml  reports_config.yml  requirements.txt  setup.py  shweta_exercise1.ipynb  test_doc.ipynb
_shared_utils/: Makefile  README.md  conda-requirements.txt  map_utils.py  precommit.txt  pyproject.toml  requirements.txt  requirements_non_jupyterhub.txt  setup.py
_shared_utils/shared_utils/: __init__.py  add_dim_county_geog.ipynb  altair_utils.py  arcgis_query.py  bq_utils.py  calitp.mplstyle  calitp_color_palette.py  catalog_utils.py  citywide.mplstyle  create_portfolio_display_yaml.py  dask_utils.py  db_utils.py  dbt_for_gtfs_utils_v2.sql  export_portfolio_display_yml_airtable.ipynb  generate_rt_operators_catalog.py  geo_utils.py  geog_utils_to_add.py  geography_utils.py  gtfs_analytics_data.yml  gtfs_dataset_name_to_analysis_name.py  gtfs_digest_completion.yml  gtfs_digest_excluded_orgs.yml  gtfs_digest_many_keys_many_orgs.yml  gtfs_digest_nunique_routes.yml  gtfs_digest_one_key_many_orgs.yml  gtfs_digest_one_org_many_keys.yml  gtfs_digest_org_gtfs_status.yml  gtfs_utils.py  gtfs_utils_v2.py  map_utils.py  portfolio_organization_name.yml  portfolio_utils.py  publish_utils.py  rt_dates.py  rt_filter_map_plot.py  rt_trips_catalog.yaml  rt_utils.py  schd_vp_cats.yml  schedule_gtfs_dataset_key_multi_operator.yml  schedule_gtfs_keys_multi_orgs.py  (+14 more)
_shared_utils/tests/: conftest.py  test_catalog_utils.py
calitp-data-analysis/: pyproject.toml
calitp-data-analysis/calitp_data_analysis/: __init__.py  geography_utils.py  magics.py  sql.py
calitp-portfolio/: command_ref.md  demo.md  pyproject.toml
calitp-portfolio/tests/: test_build.py  test_build_integration.py  test_clean.py  test_cli.py  test_deploy.py  test_engine.py  test_index.py  test_list.py  test_login.py  test_models.py  test_mutations.py  test_toc.py
conveyal_update/: Makefile  README.md  check_download_feeds.ipynb  conveyal_vars.py  dev_conveyal_ids.ipynb  download_data.py  evaluate_feeds.py  export_ac_feeds.ipynb  match_feeds_regions.py  old_PrepGTFSFeeds.ipynb  pyproject.toml  run_conveyal_update.py  scag_2022_export.ipynb
conveyal_update/archive/: dev_conveyal_ids.ipynb  export_ac_feeds.ipynb  scag_2022_export.ipynb
conveyal_update/raw_feed_download_utils/: constants.py  download_data.py  entities.py  evaluate_feeds.py  get_feed_info.py  get_feeds.py  match_feeds_regions.py
portfolio/: README.md  _toc.yml  analyses.yml  best-practices.md  gtfs_digest.yml  highway_corridors.yml  marin.yml  operator-naming.ipynb  operator_utils.py  portfolio.py  portfolio_name_testing.ipynb  portfolio_site_checker.py  pyproject.toml  reports_config.yml  requirements.txt  rt_parallel.yml  sample_no_sections.yml  sample_with_groups.yml  sample_with_sections.yml  template_README.md  test-analyses.yml  test.yml  tips-tricks-add-to-docs.md
portfolio/ahsc/: 00__empty_nb__.ipynb  0__empty_nb__.ipynb  README.md  _config.yml  _toc.yml  myst.yml
portfolio/atp/: 0__report_analysis__.ipynb  _config.yml  _toc.yml
portfolio/competitive_corridors/: README.md  _config.yml  _toc.yml  district_02-redding.md
portfolio/digest_typologies/: _config.yml  district_06-fresno.md
portfolio/district_digest/: README.md  _config.yml  _toc.yml
portfolio/dla/: README.md  _config.yml  _toc.yml  district_10.md  district_12.md  district_4.md  district_4__district_name_la-metro-this-is-a-placeholder__itp_id_1.md  district_4__district_name_la-metro-this-is-a-placeholder__itp_id_2.md  district_9.md
portfolio/gtfs_digest/: README.md  (+22 more)
realizable_transit_accessibility/: README.md  columns.py  constants.py  gtfs_utils.py  pyproject.toml  requirements.txt  retrospective_feed_generation.ipynb  retrospective_feed_generation.py  rt_schedule_anomaly_exploration.ipynb  rt_stop_times_copied_functions.py  rt_stop_times_exploration.ipynb  script_retrospective_feed_generation.py  test_files.csv  warehouse_utils.py
rt_segment_speeds/: 00_diagnose_segments.ipynb  00_muni_exploratory.ipynb  00_threshold_exploratory.ipynb  00_threshold_exploratory_v1.ipynb  00_threshold_v2_exploratory.ipynb  01_lookup_loop_route.ipynb  04_threshold_exploratory_v1.ipynb  05_threshold_v2_exploratory.ipynb  06_scheduled_v_rt.ipynb  07_plot_stop_metrics.ipynb  08_multiple_stops_in_segment.ipynb  09_loop_shapes_cut.ipynb  09_loop_shapes_exploration.ipynb  10_long_trips.ipynb  11_tiger.ipynb  12_organization_name.ipynb  12_speeds.ipynb  13_organization_name.ipynb  14_eric_explore_compare.ipynb  15_big_blue_bus.ipynb  15_stop_combos_for_segments.ipynb  16_stop_combos_for_segments.ipynb  17_debug_empty_stop_segments.ipynb  18_speed_distribution.ipynb  19_meters_threshold.ipynb  20_vp_direction_vectors.ipynb  21_segment_comparison.ipynb  22_investigate_specific_segs.ipynb  22a_investigate_post_interpolation.ipynb  23_project_all_vp_explore.ipynb  24_plot_interpolation_results.ipynb  25_interpolation_issues.ipynb  26_weekly_avg_speeds.ipynb  27_pkg_gtfs_segments.ipynb  28_route_averages.ipynb  29_speed_cutoffs.ipynb  30_interpolated_segments.ipynb  31_interpolated_segments_with_new_stops.ipynb  32_nearest_neighbor_setup.ipynb  33_check_speedmap_pipeline_results.ipynb  (+53 more)
thruway_intercity_bus/: .gitignore  00_explore_availability.ipynb  01_sf_emeryville.ipynb  02_define_corridors.ipynb  03_explore_ridership.ipynb  04_gtfs_link_charts.ipynb  05_ridership_time_series.ipynb  06_cost_time_series.ipynb  0_explore_availability.ipynb  99_rail_alliance_pilot.ipynb  README.md  chart_utils.py  pyproject.toml  requirements.txt  thruway_intercity_bus.yml  update_vars.py  utils.py
(+7035 files in other folders)
