[project]
name = "cal-itp-data-analyses"
authors = [{ name = "Cal-ITP" }]
version = "0.1.0"
requires-python = ">=3.11.0, <3.12.0"
dependencies = []

[tool.uv.workspace]
members = [
    "calitp-data-analysis",
    "_shared_utils",
    "portfolio",
    "rt_segment_speeds",
    "rt_delay",
    "rt_predictions",
    "thruway_intercity_bus",
    "sb125_analyses",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "shared-utils",
    "segment-speed-utils",
    "rt-analysis",
    "ipykernel>=6.29.0",
    "pyproject-local-kernel",
    "black==24.10.0",
    "isort==5.10.1",
    "pre-commit>=2.18.1",
    "nbdime>=4.0.4",
]
portfolio = [
    "axe-selenium-python",
    "humanize~=4.6",
    "jupyter-book==2.1.1",
    "nbformat~=5.8",
    "papermill~=2.4",
    "pydantic>=2.0",
    "pyaml==21.10.1",
    "typer>=0.9",
]
test = [
    { include-group = "dev" },
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-recording>=0.13.4,<0.14.0",
    "pytest-unordered>=0.7.0,<0.8.0",
]

[tool.uv.sources]
shared-utils = { workspace = true }
calitp-data-analysis = { workspace = true }
segment-speed-utils  = { workspace = true }
rt-analysis = { workspace = true }
