[project]
name = "shared-utils"
version = "5.0.0"
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
    "calitp-data-analysis",
    "altair==6.0.0",
    "altair-transform==0.2.0",
    "branca>=0.7.0",
    "dask>=2024.10.0,<2025.4.0",
    "dask-geopandas>=0.5.0",
    "folium>=0.20.0,<0.21.0",
    "gcsfs==2024.5.0",
    "great_tables==0.20.0",
    "gt_extras==0.0.8",
    "intake==0.6.4",
    "intake-geopandas>=0.3.0",
    "itables==2.7.3",
    "loguru>=0.6.0,<0.7",
    "mapclassify>=2.8.0,<3",
    "matplotlib>=3.10.5,<4.0.0",
    "movingpandas==0.22.4",
    "numba>=0.62.1,<0.63.0",
    "numpy>=1.26.4,<2.0.0",
    "omegaconf==2.3.0",
    "polars==1.22.0",
    "python-slugify>=8.0.0",
    "pyyaml>=6.0",
    "quarto==0.1.0",
    "quarto-cli==1.6.40",
    "scipy>=1.11.0",
    "seaborn>=0.11.2,<0.12.0",
    "stonesoup==1.8",
    "tqdm>=4.66.0",
    "vegafusion==2.0.3",
    "vl-convert-python>=1.6.0",
    "xmltodict>=0.13.0,<0.14",
]

[dependency-groups]
test = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-recording>=0.13.4,<0.14.0",
    "pytest-unordered>=0.7.0,<0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared_utils"]

[tool.uv.sources]
calitp-data-analysis = { workspace = true }
