[project]
name = "calitp-data-analysis"
version = "2026.4.0"
description = "Shared code for querying Cal-ITP data in notebooks, primarily."
authors = [{ name = "Cal-ITP" }, { name = "Erika Pacheco" }, { name = "Rae Bonfanti" }]
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
    "altair>=5.1.1",
    "dask>=2024.10.0,<2025.4.0",
    "dask-geopandas>=0.5.0",
    "gcsfs==2024.5.0",
    "geopandas>=0.14.0,<0.15.0",
    "ipython>=8.9.0,<9.0.0",
    "jinja2>=3.1.3,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pandas-gbq>=0.19.1,<0.20.0",
    "requests>=2.31.0,<3.0.0",
    "shapely>=2.0.1,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "sqlalchemy-bigquery>=1.6.1,<2.0.0",
]
# Dropped from PyPI version: gtfs-segments, pyairtable, black
# — not imported by this package's code. Per-project deps if needed.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calitp_data_analysis"]

[tool.black]
line-length = 120
