[project]
name = "segment-speed-utils"
version = "1.8"
description = "Utility functions for GTFS RT segment speeds"
authors = [{ name = "Cal-ITP" }]
readme = "README.md"
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
  "calitp-data-analysis",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
calitp-data-analysis = { workspace = true }
