[project]
name = "thruway-intercity-bus"
version = "0.1.0"
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
    "shared-utils",
    "calitp-data-analysis",
    "vegafusion[embed]>=1.5.0",
    "vl-convert-python>=1.6.0",
]

[tool.uv]
package = false

[tool.uv.sources]
shared-utils = { workspace = true }
calitp-data-analysis = { workspace = true }
